# portfolio

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/danelfin_api/: client.py  config.py
src/portfolio/:  api_client.py  __init__.py  config.py  main.py
