[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = "A portfolio project that fetches financial data"
authors = ["Zolcsika <bushdoctor2008@gmail.com>"]
readme = "README.md"
packages = [
    { include = "portfolio", from = "src" }
]

[tool.poetry.dependencies]
python = "3.12.7"
requests = "^2.31.0"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

